# rebel_ok

./: .gitignore  Makefile  build_flow.md  plot.py  run.py
cfvpy/: models.py  selfplay.py
conf/c02_selfplay/: liars_sp.yaml
conf/common/launcher/: slurm.yaml
csrc/liars_dice/: CMakeLists.txt  build_flow.md  gen_benchmark.cpp  real_net.cc  recursive_solving.cc  recursive_solving.h  stats.cc  subgame_solving.cc  subgame_solving.h
csrc/liars_dice/rela/: context.h  data_loop.h  prioritized_replay.h  pybind.cc  types.h
exps/adhoc/2025-03-28T18:15:49.991325/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@60@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml
exps/adhoc/2025-03-28T18:38:47.772451/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@0@selfplay.threads_per_gpu@8@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  workdir.diff
exps/adhoc/2025-03-28T21:20:43.294927/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@0@selfplay.threads_per_gpu@8@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  workdir.diff
exps/adhoc/2025-03-31T17:27:12.305111/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@1@selfplay.cpu_gen_threads@6@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  workdir.diff
exps/adhoc/2025-03-31T17:30:51.520736/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@1@selfplay.cpu_gen_threads@6@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  workdir.diff
exps/adhoc/2025-03-31T17:36:05.587978/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@1@selfplay.cpu_gen_threads@6@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-03-31T17:42:08.950515/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@1@selfplay.cpu_gen_threads@6@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-03-31T17:44:00.486785/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@1@selfplay.cpu_gen_threads@6@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  result.torch  tmp.torchscript  workdir.diff
exps/adhoc/2025-03-31T17:49:50.076938/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@1@selfplay.cpu_gen_threads@6@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  result.torch  tmp.torchscript  workdir.diff
exps/adhoc/2025-03-31T17:53:04.957516/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@1@selfplay.cpu_gen_threads@6@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  result.torch  tmp.torchscript  workdir.diff
exps/adhoc/2025-03-31T18:01:34.033420/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@1@selfplay.cpu_gen_threads@6@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  result.torch  tmp.torchscript  workdir.diff
exps/adhoc/2025-04-04T21:07:44.451504/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@5@selfplay.cpu_gen_threads@10@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-04-05T01:59:38.269686/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@60@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-04-06T15:19:29.400629/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@60@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-04-06T15:45:13.031186/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@5@selfplay.cpu_gen_threads@16@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript
exps/adhoc/2025-04-06T16:51:06.498737/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@6@selfplay.cpu_gen_threads@16@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-04-06T17:05:16.157679/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@6@selfplay.cpu_gen_threads@16@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-04-06T19:05:45.555572/c02_selfplay/liars_sp@env.num_dice@2@env.num_faces@3@selfplay.cpu_gen_threads@60@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-04-06T23:01:29.924026/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@60@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
exps/adhoc/2025-04-07T17:17:25.874936/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@60@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  workdir.diff
exps/adhoc/2025-04-07T17:19:42.062585/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@60@env.subgame_params.use_cfr@true/: config.yaml  hydra.yaml  overrides.yaml  workdir.diff
exps/adhoc/2025-04-07T17:25:45.305178/c02_selfplay/liars_sp@env.num_dice@1@env.num_faces@4@selfplay.cpu_gen_threads@60@env.subgame_params.use_cfr@true/: config.yaml  exploitability.txt  hydra.yaml  overrides.yaml  tmp.torchscript  workdir.diff
heyhi/: __init__.py
(+1000 files in other folders)
